Fixed sidebar gap issue

--- a/client/src/styles/SideBar.css
+++ b/client/src/styles/SideBar.css
@@ -8,3 +8,7 @@
         height: 0;
     }
 }
+
+div#wrapper {
+    width: 100%;
+}
